--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
 *{
-    margin: 0;
-    padding: 0;
     font-family: sans-serif;
     background-color: darkred;
 }
 
 ul{
+    overflow: visible;
     list-style-type: none;
-    background-color: darkgrey;
-    text-align: left;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(30, 30, 30);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 li {
     float: left;
+    border-right: 1px solid grey;
 }
 
 li a {
-    color: white;
-    font-size: 40px;
     display: block;
-    padding: 80 px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 li a:hover {
