--- a/style.css
+++ b/style.css
@@ -2,37 +2,74 @@
     font-family: sans-serif;
     background-color: white;
 }
-
-ul{
-    overflow: visible;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+/* The navigation menu */
+.navbar {
+    overflow: hidden;
     background-color: white;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-li {
+  }
+  
+  /* Navigation links */
+  .navbar a {
     float: left;
-    border-right: 25px solid rgb(255, 255, 255);
-}
-
-li a {
-    display: block;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+    font-size: 16px;
     color: darkred;
     text-align: center;
-    padding: 14px 60px;
+    padding: 25px 50px;
     text-decoration: none;
-}
-
-li a:hover {
+  }
+  
+  /* The subnavigation menu */
+  .subnav {
+    float: left;
+    overflow: hidden;
+  }
+  
+  /* Subnav button */
+  .subnav .subnavbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: darkred;
+    padding: 25px 50px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  /* Add a red background color to navigation links on hover */
+  .navbar a:hover, .subnav:hover .subnavbtn {
+    background-color: darkred;
+    color:white;
+  }
+  
+  /* Style the subnav content - positioned absolute */
+  .subnav-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    padding: 5px 10px;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
+  }
+  
+  /* Style the subnav links */
+  .subnav-content a {
+    float: left;
+    color: darkred;
+    text-decoration: none;
+  }
+  
+  /* Add a grey background color on hover */
+  .subnav-content a:hover {
     background-color: darkred;
     color: white;
-}
-
+  }
+  
+  /* When you move the mouse over the subnav container, open the subnav content */
+  .subnav:hover .subnav-content {
+    display: block;
+  }
 h1 {
     color: darkred;
     font-size: 70px;
