--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@
   background-color: darkred;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 15px 28px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   float: right;
-  border-radius: 8px;
+  border-radius: 10px;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
 }
 
 .button:hover {
