--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 /* The navigation menu */
 .navbar {
-    overflow: hidden;
+    overflow: auto;
     background-color: white;
     border-bottom: 5px solid darkred;
     font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
