--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
-    font-family: sans-serif;
-    background-color: white;
+  font-family: sans-serif;
+  background-color: white;
 }
 
+/* For newpost button on homepage and submit post button in newPost */
 .button {
   background-color: darkred;
   border: none;
@@ -21,115 +22,144 @@
 .button:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
 /* The navigation menu */
 .navbar {
-    overflow: hidden;
-    background-color: white;
-    border-bottom: 2px solid darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Navigation links */
-  .navbar a {
-    float: left;
-    font-weight: bold;
-    font-size: 20px;
-    color: darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    text-align: center;
-    padding: 15px 8%;
-    text-decoration: none;
-  }
-  
-  /* The subnavigation menu */
-  .subnav {
-    float: left;
-    overflow: hidden;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Subnav button */
-  .subnav .subnavbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: darkred;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-    padding-left: 30%;
-    padding: 15px 30px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  /* Add a red background color to navigation links on hover */
-  .navbar a:hover, .subnav:hover .subnavbtn {
-    background-color: darkred;
-    color:white;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* Style the subnav content - positioned absolute */
-  .subnav-content {
-    display: none;
-    position: absolute;
-    left: 0;
-    padding: 4px 10px;
-    background-color: white;
-    width: 100%;
-    z-index: 1;
-  }
-  
-  /* Style the subnav links */
-  .subnav-content a {
-    float: left;
-    padding: 15px 20px;
-    font-weight: normal;
-    font-size: medium;
-    color: darkred;
-    text-decoration: none;
-  }
-  
-  /* Add a grey background color on hover */
-  .subnav-content a:hover {
-    background-color: darkred;
-    color: white;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-  }
-  
-  /* When you move the mouse over the subnav container, open the subnav content */
-  .subnav:hover .subnav-content {
-    display: block;
-    border-bottom: 2px solid darkred;
-  }
-
-h1 {
-    color: darkred;
-    font-size: 70px;
-    text-align:center;
-    margin-bottom: 30px;
-    margin-top: 40px;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-h3 {
-    color: darkred;
-    font-size: 20px;
-    text-align:center;
-    margin: 10px 0;
-    font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-.labelsf {
-  color: darkred;
-  font-size: 20px;
-  text-align:center;
-  margin: 30px 0;
+  overflow: hidden;
+  background-color: white;
+  border-bottom: 2px solid darkred;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
+/* Navigation links */
+.navbar a {
+  float: left;
+  font-weight: bold;
+  font-size: 20px;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  text-align: center;
+  padding: 15px 8%;
+  text-decoration: none;
+}
 
+/* The subnavigation menu */
+.subnav {
+  float: left;
+  overflow: hidden;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
 
+/* Subnav button */
+.subnav .subnavbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  padding-left: 30%;
+  padding: 15px 30px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+/* Add a red background color to navigation links on hover */
+.navbar a:hover, .subnav:hover .subnavbtn {
+  background-color: darkred;
+  color:white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* Style the subnav content - positioned absolute */
+.subnav-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  padding: 4px 10px;
+  background-color: white;
+  width: 100%;
+  z-index: 1;
+}
+
+/* Style the subnav links */
+.subnav-content a {
+  float: left;
+  padding: 15px 20px;
+  font-weight: normal;
+  font-size: medium;
+  color: darkred;
+  text-decoration: none;
+}
+
+/* Add a grey background color on hover */
+.subnav-content a:hover {
+  background-color: darkred;
+  color: white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* When you move the mouse over the subnav container, open the subnav content */
+.subnav:hover .subnav-content {
+  display: block;
+  border-bottom: 2px solid darkred;
+}
+
+/* For Homepage and Newpost */
+h1 {
+  color: darkred;
+  font-size: 70px;
+  text-align:center;
+  margin-top: 40px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For Course */
+h2 {
+  color: darkred;
+  font-size: 70px;
+  text-align:left;
+  margin-top: 40px;
+  margin-left: 70px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For search bar on Homepage */
+h3 {
+  color: darkred;
+  font-size: 20px;
+  text-align:center;
+  margin: 10px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For rating in Course page */
+h4 {
+  color: darkred;
+  font-size: 40px;
+  text-align:left;
+  margin-top: -40px;
+  margin-left: 70px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For elements of Course Table */
+h5 {
+  color: darkred;
+  font-size: 25px;
+  text-align:center;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For labels on newPost and Course pages */
+.labelsf {
+  color: darkred;
+  font-size: 25px;
+  text-align:center;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For search bar on home and input queries on newPost */
 input[type=text] {
   width: 20%;
   padding: 12px 20px;
@@ -147,7 +177,7 @@ input[type=text]:focus {
 }
 
 input[type=text]:hover {
-    width: 20%;
+  width: 20%;
 }
 
 /* Style the header: fixed position (always stay at the top) */
@@ -158,6 +188,7 @@ input[type=text]:hover {
   width: 100%;
   background-color: #f1f1f1;
 }
+
 /* The progress container (grey background) */
 .progress-container {
   width: 100%;
@@ -172,6 +203,7 @@ input[type=text]:hover {
   width: 0%;
 }
 
+/*Jonny: What is this doing?*/
 .index input[type=text] {
   width: 40%;
   padding: 5px 20px;
@@ -188,18 +220,18 @@ input[type=text]:hover {
   width: 43%;
 }
 
+/* For Tables: */
 table, td, th {
   border: 2px solid;
 }
 
 table {
   margin-left: 15%;
-  padding-top: 10px;
-  padding-bottom: 10px;
   width: 70%;
-  height: 100px;
   border-collapse: collapse;
 }
+
+/* What does this do? */
 table td:nth-child(1){
   width: 200%;
   height: 100px;
