--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
 /* Style the subnav links */
 .subnav-content a {
   float: left;
+  margin-left: 11%;
   padding: 15px 20px;
   font-weight: normal;
   font-size: medium;
@@ -237,4 +238,34 @@ table td:nth-child(1){
   width: 200%;
   height: 100px;
   border-collapse: collapse;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 78%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: gold;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: goldrod;
+  cursor: pointer;
 }
