--- a/style.css
+++ b/style.css
@@ -3,26 +3,24 @@
   background-color: white;
 }
 
-/* For newpost button on homepage and submit post button in newPost */
 .button {
-  background-color: darkred;
-  border: none;
-  color: white;
-  padding: 15px 28px;
-  text-align: center;
-  text-decoration: none;
-  float: right;
-  border-radius: 10px;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
+background-color: darkred;
+border: none;
+color: white;
+padding: 15px 28px;
+text-align: center;
+text-decoration: none;
+float: right;
+border-radius: 10px;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
 }
 
 .button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
 /* The navigation menu */
 .navbar {
   overflow: hidden;
@@ -35,11 +33,11 @@
 .navbar a {
   float: left;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 20px;
   color: darkred;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   text-align: center;
-  padding: 10px 7%;
+  padding: 15px 8%;
   text-decoration: none;
 }
 
@@ -85,7 +83,6 @@
 /* Style the subnav links */
 .subnav-content a {
   float: left;
-  margin-left: 11%;
   padding: 15px 20px;
   font-weight: normal;
   font-size: medium;
@@ -106,184 +103,129 @@
   border-bottom: 2px solid darkred;
 }
 
-/* For Homepage and Newpost */
 h1 {
   color: darkred;
   font-size: 70px;
   text-align:center;
+  margin-bottom: 30px;
   margin-top: 40px;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
-/* For Course */
-h2 {
-  color: darkred;
-  font-size: 70px;
-  text-align:left;
-  margin-top: 40px;
-  margin-left: 70px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For search bar on Homepage */
 h3 {
   color: darkred;
-  font-size: 25px;
+  font-size: 20px;
   text-align:center;
-  margin: 10px;
+  margin: 10px 0;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
-/* For rating in Course page */
-h4 {
-  color: darkred;
-  font-size: 40px;
-  text-align:left;
-  margin-top: -40px;
-  margin-left: 100px;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For elements of Course Table */
-h5 {
-  color: darkred;
-  font-size: 25px;
-  text-align:center;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
-}
-
-/* For labels on newPost and Course pages */
 .labelsf {
-  color: darkred;
-  font-size: 25px;
-  text-align:center;
-  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+color: darkred;
+font-size: 20px;
+text-align:center;
+margin: 30px 0;
+font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
-/* For search bar on home and input queries on newPost */
+
+
 input[type=text] {
-  width: 30%;
-  padding: 12px 20px;
-  margin: 8 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: 1px solid grey;
-  border-radius: 8px;
+width: 20%;
+padding: 12px 20px;
+margin-left: 40%;
+margin: 8 auto;
+display: block;
+box-sizing: border-box;
+transition: width 0.4s ease-in-out;
+border: 1px solid grey;
+border-radius: 8px;
 }
 
 input[type=text]:focus {
-  border: 1.5px solid #555;
+border: 1.5px solid #555;
 }
 
 input[type=text]:hover {
-  width: 30%;
-}
-
-.ids input[type=text] {
-  width: 90%;
-  padding: 12px 20px;
-  margin: 8 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: 1px solid grey;
-  border-radius: 8px;
-}
-
-.ids input[type=text]:focus {
-  border: 1.5px solid #555;
-}
-
-.ids input[type=text]:hover {
-  width: 90%;
+  width: 20%;
 }
 
 /* Style the header: fixed position (always stay at the top) */
 .header {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  background-color: #f1f1f1;
+position: fixed;
+top: 0;
+z-index: 1;
+width: 100%;
+background-color: #f1f1f1;
 }
-
 /* The progress container (grey background) */
 .progress-container {
-  width: 100%;
-  height: 8px;
-  background: #ccc;
+width: 100%;
+height: 8px;
+background: #ccc;
 }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
-  height: 8px;
-  background: #04AA6D;
-  width: 0%;
+height: 8px;
+background: #04AA6D;
+width: 0%;
 }
 
-/*Jonny: What is this doing?*/
 .index input[type=text] {
-  width: 40%;
-  padding: 5px 20px;
-  margin: 0 auto;
-  display: block;
-  box-sizing: border-box;
-  transition: width 0.4s ease-in-out;
-  border: none;
-  border-bottom: 2px solid black;
-  border-radius: 0px;
+width: 40%;
+padding: 5px 20px;
+margin: 0 auto;
+display: block;
+box-sizing: border-box;
+transition: width 0.4s ease-in-out;
+border: none;
+border-bottom: 2px solid black;
+border-radius: 0px;
 }
 
 .index input[type=text]:focus {
-  width: 43%;
+width: 43%;
 }
 
-/* For Tables: */
 table, td, th {
-  border: 0px solid;
+border: 2px solid;
 }
 
 table {
-  margin-left: 5%;
-  width:90%;
-  text-align: left;
-  border-collapse: collapse;
+margin-left: 15%;
+padding-top: 10px;
+padding-bottom: 10px;
+width: 70%;
+height: 100px;
+border-collapse: collapse;
 }
-
-/* What does this do? */
 table td:nth-child(1){
-  width: 200%;
-  height: 100px;
-  border-collapse: collapse;
+width: 200%;
+height: 100px;
+border-collapse: collapse;
+}
+#allCourses {
+  overflow-y: auto;
+  height: 50vh;
 }
 
-.slider {
-  -webkit-appearance: none;
-  width: 78%;
-  height: 15px;
-  border-radius: 5px;  
-  background: #E0E0E0;
-  outline: none;
-  opacity: 1;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+/*
+Used this a reference but removed the image tag
+https://www.w3schools.com/howto/howto_css_cards.asp
+*/
+.courseCard {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: auto; /* let browser choose the width */
+  margin: 40px; /* space outside card to separate cards */
+  border: 2px solid #9A1D2E; /* Exeter color */
+  padding: 2px 16px;  /* spacing inside card around text */
+  border-radius: 25px; /* rounded borders */
 }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%; 
-  background: gold;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: goldrod;
-  cursor: pointer;
+.courseCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background-color: #9A1D2E; /* Exeter color */
+  color: white;
 }
