--- a/style.css
+++ b/style.css
@@ -41,6 +41,17 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   text-decoration: none;
 }
 
+.navbar b {
+  float: right;
+  font-weight: bold;
+  font-size: 20px;
+  color: darkred;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+  text-align: center;
+  padding: 15px 8%;
+  text-decoration: none;
+}
+
 /* The subnavigation menu */
 .subnav {
   float: left;
@@ -56,7 +67,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   color: darkred;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   padding-left: 30%;
-  padding: 15px 30px;
+  padding: 15px 26px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -69,10 +80,16 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
+.navbar b:hover, .subnav:hover .subnavbtn {
+  background-color: darkred;
+  color:white;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
 /* Style the subnav content - positioned absolute */
 .subnav-content {
   display: none;
-  position: absolute;
+  position:absolute;
   left: 0;
   padding: 4px 10px;
   background-color: white;
@@ -217,15 +234,19 @@ https://www.w3schools.com/howto/howto_css_cards.asp
 .courseCard {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: auto; /* let browser choose the width */
-  margin: 40px; /* space outside card to separate cards */
+  width: 70%; /* let browser choose the width */
+  margin-left: 15%; /* space outside card to separate cards */
+  margin-right: 15%; /* space outside card to separate cards */
+  margin-top: 30px;
   border: 2px solid #9A1D2E; /* Exeter color */
   padding: 2px 16px;  /* spacing inside card around text */
   border-radius: 25px; /* rounded borders */
+  color: darkred;
+  text-align: center;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
 .courseCard:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   background-color: #9A1D2E; /* Exeter color */
-  color: white;
 }
