--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .navbar b {
-  float: right;
+  float: left;
   font-weight: bold;
   font-size: 20px;
   color: darkred;
