--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
 }
 
 .button {
-background-color: darkred;
-border: none;
-color: white;
-padding: 15px 28px;
-text-align: center;
-text-decoration: none;
-float: right;
-border-radius: 10px;
-font-size: 16px;
-margin: 4px 2px;
-cursor: pointer;
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
+  background-color: darkred;
+  border: none;
+  color: white;
+  padding: 15px 28px;
+  text-align: center;
+  text-decoration: none;
+  float: right;
+  border-radius: 10px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
 }
 
 .button:hover {
@@ -120,6 +120,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   border-bottom: 2px solid darkred;
 }
 
+/* For Homepage and Newpost */
 h1 {
   color: darkred;
   font-size: 70px;
@@ -129,6 +130,17 @@ h1 {
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
+/* For Course */
+h2 {
+  color: darkred;
+  font-size: 70px;
+  text-align:left;
+  margin-top: 40px;
+  margin-left: 70px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* For search bar on Homepage */
 h3 {
   color: darkred;
   font-size: 20px;
@@ -137,91 +149,160 @@ h3 {
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
-.labelsf {
-color: darkred;
-font-size: 20px;
-text-align:center;
-margin: 30px 0;
-font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+/* For rating in Course page */
+h4 {
+  color: darkred;
+  font-size: 40px;
+  text-align:left;
+  margin-top: -40px;
+  margin-left: 100px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
+/* For elements of Course Table */
+h5 {
+  color: darkred;
+  font-size: 25px;
+  text-align:center;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
 
+/* For labels on newPost and Course pages */
+.labelsf {
+  color: darkred;
+  font-size: 20px;
+  text-align:center;
+  margin: 30px 0;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
 
+/* For search bar on home and input queries on newPost */
 input[type=text] {
-width: 20%;
-padding: 12px 20px;
-margin-left: 40%;
-margin: 8 auto;
-display: block;
-box-sizing: border-box;
-transition: width 0.4s ease-in-out;
-border: 1px solid grey;
-border-radius: 8px;
+  width: 20%;
+  padding: 12px 20px;
+  margin-left: 40%;
+  margin: 8 auto;
+  display: block;
+  box-sizing: border-box;
+  transition: width 0.4s ease-in-out;
+  border: 1px solid grey;
+  border-radius: 8px;
 }
 
 input[type=text]:focus {
-border: 1.5px solid #555;
+  border: 1.5px solid #555;
 }
 
 input[type=text]:hover {
   width: 20%;
 }
 
+.ids input[type=text] {
+  width: 90%;
+  padding: 12px 20px;
+  margin: 8 auto;
+  display: block;
+  box-sizing: border-box;
+  transition: width 0.4s ease-in-out;
+  border: 1px solid grey;
+  border-radius: 8px;
+}
+
+.ids input[type=text]:focus {
+  border: 1.5px solid #555;
+}
+
 /* Style the header: fixed position (always stay at the top) */
 .header {
-position: fixed;
-top: 0;
-z-index: 1;
-width: 100%;
-background-color: #f1f1f1;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
 }
+
 /* The progress container (grey background) */
 .progress-container {
-width: 100%;
-height: 8px;
-background: #ccc;
+  width: 100%;
+  height: 8px;
+  background: #ccc;
 }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
-height: 8px;
-background: #04AA6D;
-width: 0%;
+  height: 8px;
+  background: #04AA6D;
+  width: 0%;
 }
 
+/*What is this and the next block doing? */
 .index input[type=text] {
-width: 40%;
-padding: 5px 20px;
-margin: 0 auto;
-display: block;
-box-sizing: border-box;
-transition: width 0.4s ease-in-out;
-border: none;
-border-bottom: 2px solid black;
-border-radius: 0px;
+  width: 40%;
+  padding: 5px 20px;
+  margin: 0 auto;
+  display: block;
+  box-sizing: border-box;
+  transition: width 0.4s ease-in-out;
+  border: none;
+  border-bottom: 2px solid black;
+  border-radius: 0px;
 }
 
 .index input[type=text]:focus {
-width: 43%;
+  width: 43%;
 }
 
+/* For Tables: */
 table, td, th {
-border: 2px solid;
+  border: 2px solid;
 }
 
 table {
-margin-left: 15%;
-padding-top: 10px;
-padding-bottom: 10px;
-width: 70%;
-height: 100px;
-border-collapse: collapse;
-}
+  margin-left: 15%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 70%;
+  height: 100px;
+  border-collapse: collapse;
+  }
+
+/* What does this do? */
 table td:nth-child(1){
-width: 200%;
-height: 100px;
-border-collapse: collapse;
+  width: 200%;
+  height: 100px;
+  border-collapse: collapse;
 }
+
+.slider {
+  -webkit-appearance: none;
+  width: 78%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #E0E0E0;
+  outline: none;
+  opacity: 1;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: gold;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: goldrod;
+  cursor: pointer;
+}
+
 #allCourses {
   overflow-y: auto;
   height: 50vh;
