--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+/* Establish font and background color for whole page */
 *{
-  font-family: sans-serif;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   background-color: white;
 }
 
+/* For the "Submit" button on the newPost page*/
 .button {
   background-color: darkred;
   border: none;
@@ -21,6 +23,7 @@
 .button:hover {
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
 /* The navigation menu */
 .navbar {
   overflow: hidden;
@@ -37,9 +40,10 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   color: darkred;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   text-align: center;
-  padding: 15px 8%;
+  padding: 10px 7%;
   text-decoration: none;
 }
+
 
 .navbar b {
   float: left;
@@ -100,6 +104,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 /* Style the subnav links */
 .subnav-content a {
   float: left;
+  margin-left: 11%;
   padding: 15px 20px;
   font-weight: normal;
   font-size: medium;
@@ -124,6 +129,16 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 h1 {
   color: darkred;
   font-size: 70px;
+  text-align:center;
+  margin-bottom: 30px;
+  margin-top: 40px;
+  font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
+}
+
+/* To make the "2023" smaller at the end */
+span {
+  color: darkred;
+  font-size: 45px;
   text-align:center;
   margin-bottom: 30px;
   margin-top: 40px;
@@ -176,8 +191,11 @@ h5 {
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
 }
 
-/* For search bar on home and input queries on newPost */
+/* For search bar on home and some input queries on newPost */
+/*  Bit of a dilemma here. The margin-left needs to be set on 40% so the search bar on the home page looks good, */
+/* but needs to be 0% or 1% so the input boxes on newpost go the left */
 input[type=text] {
+  text-align: left;
   width: 20%;
   padding: 12px 20px;
   margin-left: 40%;
@@ -197,6 +215,7 @@ input[type=text]:hover {
   width: 20%;
 }
 
+/* For certain inputs on the newPost page */
 .ids input[type=text] {
   width: 90%;
   padding: 12px 20px;
@@ -258,7 +277,8 @@ table, td, th {
 }
 
 table {
-  margin-left: 15%;
+  margin-left: 5%;
+  text-align: left;
   padding-top: 10px;
   padding-bottom: 10px;
   width: 70%;
@@ -273,6 +293,7 @@ table td:nth-child(1){
   border-collapse: collapse;
 }
 
+/* For rating slider */
 .slider {
   -webkit-appearance: none;
   width: 78%;
@@ -303,6 +324,12 @@ table td:nth-child(1){
   cursor: pointer;
 }
 
+/* Stars become orange when "checked" */
+.checked {
+  color: orange;
+}
+
+/* What does this do? */
 #allCourses {
   overflow-y: auto;
   height: 50vh;
@@ -314,7 +341,7 @@ https://www.w3schools.com/howto/howto_css_cards.asp
 */
 .courseCard {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0s;
+  transition: 0.2s;
   width: 70%; /* let browser choose the width */
   margin-left: 15%; /* space outside card to separate cards */
   margin-right: 15%; /* space outside card to separate cards */
