--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@
   background-color: darkred;
   border: none;
   color: white;
+
   padding: 15px 28px;
   text-align: center;
   text-decoration: none;
   float: right;
   border-radius: 10px;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 50px 50px;
   cursor: pointer;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.14), 0 17px 50px 0 rgba(0,0,0,0.14);
 }
@@ -43,7 +44,6 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   text-decoration: none;
 }
 
-
 .navbar b {
   float: left;
   font-weight: bold;
@@ -51,7 +51,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   color: darkred;
   font-family: Optima, Geneva, Tahoma, sans-serif, Times, serif;
   text-align: center;
-  padding: 15px 8%;
+  padding: 10px 7%;
   text-decoration: none;
 }
 
@@ -231,10 +231,9 @@ h5 {
 /*  Bit of a dilemma here. The margin-left needs to be set on 40% so the search bar on the home page looks good, */
 /* but needs to be 0% or 1% so the input boxes on newpost go the left */
 input[type=text] {
-  text-align: left;
-  width: 20%;
+  width: 400pxpx;
   padding: 12px 20px;
-  margin-left: 40%;
+  margin-left: 0%;
   margin: 8 auto;
   display: block;
   box-sizing: border-box;
@@ -247,13 +246,9 @@ input[type=text]:focus {
   border: 1.5px solid #555;
 }
 
-input[type=text]:hover {
-  width: 20%;
-}
-
 /* For certain inputs on the newPost page */
 .ids input[type=text] {
-  width: 40%;
+  width: 300px;
   padding: 12px 20px;
   margin-left: 0%;
   margin: 8 auto;
@@ -266,10 +261,6 @@ input[type=text]:hover {
 
 .ids input[type=text]:focus {
   border: 1.5px solid #555;
-}
-
-.ids input[type=text]:hover {
-  width: 45%;
 }
 
 /* Style the header: fixed position (always stay at the top) */
@@ -314,11 +305,11 @@ input[type=text]:hover {
 
 /* For Tables: */
 table, td, th {
-  border: 2px solid;
+  border: 0px solid;
 }
 
 table {
-  margin-left: 5%;
+  margin-left: 13%;
   text-align: left;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -334,9 +325,19 @@ table td:nth-child(1){
   border-collapse: collapse;
 }
 
+.headert table {
+  margin-left: 5%;
+  text-align: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 90%;
+  height: 100px;
+  border-collapse: collapse;
+}
+
 /* For rating slider */
 .slider {
-  -webkit-appearance: none;
+  appearance: none;
   width: 78%;
   height: 15px;
   border-radius: 5px;  
