--- a/style.css
+++ b/style.css
@@ -412,3 +412,10 @@ https://www.w3schools.com/howto/howto_css_cards.asp
   transition: 0.25s;
   color: white; /* making text white */
 }
+
+.courseCard .rating {
+  color: #ffd700; /* set the color of the stars */
+  font-size: 24px; /* set the size of the stars */
+  margin-top: 10px; /* add some spacing between the title and the stars */
+  margin-bottom: 10px;
+}
