--- a/style.css
+++ b/style.css
@@ -382,6 +382,46 @@ table td:nth-child(1){
 .rating input:checked ~ label:before, .rating:not(:checked) > label:hover:before, .rating:not(:checked) > label:hover ~ label:before {
   color: orange;
 }
+
+/* ratingb is for coursecards and postcards */
+.ratingb {
+  margin-left: -25px;
+  width: 225px;
+}
+
+/* Placing Stars */
+.ratingb label {
+  /* Stars select left to right */
+  float: right;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+/* Spacing Stars */
+.ratingb label:not(:first-of-type) {
+  padding-right: 0px;
+}
+
+.ratingb label:before {
+  /* Code for stars */
+  content: "\2605";
+  /* Star size */
+  font-size: 35px;
+  color: #ccc;
+  line-height: 1;
+}
+
+/* Deleting original clickable ratings */
+.ratingb input {
+  display: none;
+}
+
+/* Making clicked stars orange */
+.ratingb input:checked ~ label:before {
+  color: orange;
+}
+
 .courseCard{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.2s;
